// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-typography should render headings 1`] = `
<modus-wc-typography variant="h1">
  <!---->
  <h1 class="modus-wc-typography">
    Test content
  </h1>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with custom props 1`] = `
<modus-wc-typography custom-class="test-class" size="sm" variant="body" weight="bold">
  <!---->
  <body class="modus-wc-font-bold modus-wc-text-sm modus-wc-typography test-class">
    Test content
  </body>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with default props 1`] = `
<modus-wc-typography>
  <!---->
  <p class="modus-wc-font-normal modus-wc-text-md modus-wc-typography">
    Test content
  </p>
</modus-wc-typography>
`;
